2009-10-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-overlay-get): New alias to overlay-get.
	(gnus-overlays-in): New alias to overlays-in.

	* gnus-sum.el (gnus-remove-overlays): Use gnus-overlays-in,
	gnus-overlay-get, and gnus-delete-overlay.
	(gnus-summary-show-thread): Make it work as well for systems in which
	next-single-char-property-change is not available.
	(gnus-summary-hide-thread): Use gnus-make-overlay and gnus-overlay-put.

	* gnus-xmas.el (gnus-xmas-overlays-in): New function.
	(gnus-overlay-get): New alias to extent-property.
	(gnus-overlays-in): New alias to gnus-xmas-overlays-in.

	* dgnushack.el: Autoload add-to-invisibility-spec for XEmacs 21.4 and
	SXEmacs.

	* lpath.el: Fbind next-single-char-property-change for XEmacs 21.4 and
	SXEmacs.

2009-10-14  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-remove-overlays): Add doc string and alias.

2009-10-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* gnus-sum.el (gnus-remove-overlays): Compatibility code for Emacs 21
	and XEmacs that don't have `remove-overlays'.

2009-10-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-sum.el (gnus-summary-mode, gnus-summary-show-all-threads)
	(gnus-summary-show-thread, gnus-summary-hide-thread): Get rid of
	selective display.  Use overlays instead.

2009-10-04  Juanma Barranquero  <lekktu@gmail.com>

	* spam-stat.el (spam-stat-strip-xref): Fix typo in docstring.

2009-09-29  Juanma Barranquero  <lekktu@gmail.com>

	* spam-stat.el (spam-stat-load): Fix typo in message.

2009-09-24  Juanma Barranquero  <lekktu@gmail.com>

	* dig.el (dig-invoke): Fix typo in docstring.
	(query-dig): Reflow docstring.

2009-09-23  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-art.el (gnus-article-encrypt-body):
	* message.el (message-check-recipients):
	* mm-util.el (mm-codepage-setup):
	* nnir.el (gnus-summary-nnir-goto-thread, nnir-run-waissearch)
	(nnir-run-swish++, nnir-run-swish-e): Fix typos in error messages.
